--- a/brevity_to-dos.textile
+++ b/brevity_to-dos.textile
@@ -9,3 +9,5 @@
 ** Where would these be put? In .vim or in the plugin file?
 
 * Email Michael Geddes to tell him about changes?
+
+* There should be a similar command to ;; --- something that would *remove* the preceding abbrev/expansion from the abbrev list. (So that if someone were *really* getting annoyed at having j expanded, they could type that command after the offending expansion, and then that most recent expansion would be reversed and its corresponding entry in abbrevs.txt would be removed. Also with maybe a status message.)
